--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300i,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Encode+Sans+Condensed:300,400,500,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Khand:700&display=swap');
+
 
 body {
     overflow-x: hidden;
@@ -67,6 +69,7 @@ body {
 }
 
 /*========== LANDING PAGE ============*/
+
 
 .home-inner {
     background-image: url('img/pop1.png');
@@ -491,6 +494,15 @@ a.top-scroll {
 
 a.top-scroll:hover {
     opacity: .5;
+}
+
+#primary_title {
+    font-family: 'Khand', sans-serif;
+    font-size: 5.5rem !important;
+}
+
+.content_text{
+    text-align: center;
 }
 /*============ BOOTSTRAP BREAK POINTS:
 
