Misión visión y valores en inglés.

--- a/style.css
+++ b/style.css
@@ -504,6 +504,10 @@ a.top-scroll:hover {
 .content_text{
     text-align: center;
 }
+
+ul.values {
+    list-style: none;
+}
 /*============ BOOTSTRAP BREAK POINTS:
 
 Extra small (xs) devices (portrait phones, less than 576px)
